--- a/statistician.css
+++ b/statistician.css
@@ -53,6 +53,7 @@ td {
 	width: 100%;
 	height: 200px;
 	margin: 0 auto;
+    position: relative;
 }
 
 #titleMain {
@@ -61,6 +62,13 @@ td {
 	background-image: url('./images/header.png');
 	background-repeat: no-repeat;
 	z-index: 3;
+}
+
+#search {
+    position: absolute;
+    bottom: 0;
+    right: 250px;
+    z-index: 5;
 }
 
 #creeper {
